--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/target/armv7-unknown-linux-gnueabihf
-/target/debug
-/target/CACHEDIR.TAG
+/target/*
+!/target/release/
+/target/release/*
+!target/release/blum
 test
